# oni-forge

./: .gitignore  CMakeLists.txt  readme.md
assets/fonts/: ConsolasFont.hpp  InterMediumFont.hpp  InterRegularFont.hpp
src/: OniForgeApp.cpp  main.cpp
src/component/logger/: ILogger.hpp  Logger.cpp  Logger.hpp
src/component/xml/: XmlDocument.cpp  XmlDocument.hpp  XmlReader.cpp  XmlReader.hpp  XmlWriter.cpp  XmlWriter.hpp
src/gui/: OniForgeApp.cpp  OniForgeApp.hpp  OniForgeTheme.cpp  OniForgeTheme.hpp  OniGuiRenderer.cpp  OniGuiRenderer.hpp
src/gui/views/: AddFileModal.cpp  AddFileModal.hpp  ONCCView.cpp  ONCCView.hpp  ONCVView.cpp  ONCVView.hpp  TRACView.cpp  TRACView.hpp  TRAMView.cpp  TRAMView.hpp
src/model/: ONCC.hpp  ONCV.hpp  OniFile.hpp  TRAC.hpp  TRAM.hpp
src/model/mapping/: ONCCMapping.hpp  ONCVMapping.hpp  TRACMapping.hpp  TRAMMapping.hpp  XmlField.hpp
src/repository/: ONCCRepository.cpp  ONCCRepository.hpp  ONCVRepository.cpp  ONCVRepository.hpp  OniRepositoryRegistry.hpp  TRACRepository.cpp  TRACRepository.hpp  TRAMRepository.cpp  TRAMRepository.hpp
src/service/: IOniCatalogService.hpp  OniSplitService.cpp  OniSplitService.hpp  ProjectCatalogService.cpp  ProjectCatalogService.hpp  VanillaCatalogService.cpp  VanillaCatalogService.hpp
